--- a/README.html
+++ b/README.html
@@ -46,3 +46,12 @@ point processing, bit operations (and,or,xor,not) on image, setTo(), copyTo()
 <a href="https://github.com/youngmtool/opencv/blob/master/jhkim/004_006.cpp">004_006.cpp</a><br/>
 point processing, noise generation on image 
 <a href="https://github.com/youngmtool/opencv/blob/master/jhkim/004_007.cpp">004_007.cpp</a><br/>
+
+<br/>
+sykim-process image and pattern recognition<br/>
+step of digitalizing analog signal 
+<a href="https://github.com/youngmtool/opencv/blob/master/sykim/001.py">001.py</a><br/>
+structure and 4 types of digital image 
+<a href="https://github.com/youngmtool/opencv/blob/master/sykim/002.py">002.py</a><br/>
+
+<br/><br/><br/>
