--- a/README.html
+++ b/README.html
@@ -51,7 +51,15 @@ point processing, noise generation on image
 sykim-process image and pattern recognition<br/>
 step of digitalizing analog signal 
 <a href="https://github.com/youngmtool/opencv/blob/master/sykim/001.py">001.py</a><br/>
-structure and 4 types of digital image 
+structure of digital image 
 <a href="https://github.com/youngmtool/opencv/blob/master/sykim/002.py">002.py</a><br/>
+4 types (modes) of digital image, binary, color, grayscale, multi-spectral 
+<a href="https://github.com/youngmtool/opencv/blob/master/sykim/003.py">003.py</a><br/>
+
+
+
+
+
+
 
 <br/><br/><br/>
