--- a/README.html
+++ b/README.html
@@ -59,7 +59,8 @@ overview computer vision and image processing
 <a href="https://github.com/youngmtool/opencv/blob/master/sykim/004.py">004.py</a><br/>
 point operation-arithmetic operation, grayscale transformation 
 <a href="https://github.com/youngmtool/opencv/blob/master/sykim/005_001.py">005_001.py</a><br/>
-
+point operation-histogram(stretching,shrinking,sliding,equalization) 
+<a href="https://github.com/youngmtool/opencv/blob/master/sykim/005_002.py">005_002.py</a><br/>
 
 
 <br/><br/><br/>
