--- a/README.html
+++ b/README.html
@@ -61,6 +61,8 @@ point operation-arithmetic operation, grayscale transformation
 <a href="https://github.com/youngmtool/opencv/blob/master/sykim/005_001.py">005_001.py</a><br/>
 point operation-histogram(stretching,shrinking,sliding,equalization) 
 <a href="https://github.com/youngmtool/opencv/blob/master/sykim/005_002.py">005_002.py</a><br/>
+gray-level thresholding 
+<a href="https://github.com/youngmtool/opencv/blob/master/sykim/011.html">011</a><br/>
 011 morphology operation, dilation, erosion, opening, closing, structuring element 
 <a href="https://youngmtool.github.io/opencv/sykim/011.html">011</a><br/>
 012 overview of image transform 
