--- a/README.html
+++ b/README.html
@@ -62,9 +62,13 @@ point operation-arithmetic operation, grayscale transformation
 point operation-histogram(stretching,shrinking,sliding,equalization) 
 <a href="https://github.com/youngmtool/opencv/blob/master/sykim/005_002.py">005_002.py</a><br/>
 gray-level thresholding 
-<a href="https://github.com/youngmtool/opencv/blob/master/sykim/011.html">011</a><br/>
+<a href="https://github.com/youngmtool/opencv/blob/master/sykim/007.html">007</a><br/>
 image segmentation 
 <a href="https://github.com/youngmtool/opencv/blob/master/sykim/008_001.html">008_001</a><br/>
+image segmentation 
+<a href="https://github.com/youngmtool/opencv/blob/master/sykim/009_002.html">009_002</a><br/>
+image segmentation 
+<a href="https://github.com/youngmtool/opencv/blob/master/sykim/009_003.html">009_003</a><br/>
 011 morphology operation, dilation, erosion, opening, closing, structuring element 
 <a href="https://youngmtool.github.io/opencv/sykim/011.html">011</a><br/>
 012 overview of image transform 
