--- a/README.html
+++ b/README.html
@@ -1,12 +1,13 @@
 <br/><br/><br/>
 
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/000_001.cpp">build source codes with OpenCV 3.2, Cuda Toolkit 8.0, CMake 3.8.0, TBB 2017</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/000_003.cpp">build source codes, configure environment, execute test code</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_001.cpp">what does computer vision library do?</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_002.cpp">start OpenCV</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_004_about_opencv_Mat_class/001/main.cpp">001_004. How to use Mat class, how to create arrays</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_005_basic_operation_on_Mat/001/main.cpp">001_005. How to perform arithmetic operation on Mat objects</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_006.cpp">load image, creat empty window, throw image onto empty window, sobel edge on image, horizontal flip image</a><br/>
+<h2>JHKim - OpenCV lecture</h2>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/000_001.cpp">Build source codes with OpenCV 3.2, Cuda Toolkit 8.0, CMake 3.8.0, TBB 2017</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/000_003.cpp">Build source codes, Configure environment, Execute test code</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_001.cpp">What does computer vision library do?</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_002.cpp">Start OpenCV</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_004_about_opencv_Mat_class/001/main.cpp">001_004. Use Mat class, Create arrays</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_005_basic_operation_on_Mat/001/main.cpp">001_005. Perform arithmetic operation on Mat objects</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_006_basic_processing_load_image_and_show/001/main.cpp">001_006. Read image from disk, Create empty window, Sobel edge filter, Horizontal flip</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_007.cpp">how to access to and deal with pixel data (element of Mat)</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_001.cpp">load image and video and show them on window</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_002.cpp">various ways of copy image into Mat</a><br/>
@@ -25,7 +26,7 @@
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/004_007.cpp">point processing, noise generation on image</a><br/>
 
 <br/>
-sykim-process image and pattern recognition<br/>
+<h2>sykim-process image and pattern recognition</h2>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/sykim/001.py">step of digitalizing analog signal</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/sykim/002.py">structure of digital image</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/sykim/003.py">4 types (modes) of digital image, binary, color, grayscale, multi-spectral</a><br/>
