--- a/README.html
+++ b/README.html
@@ -5,10 +5,10 @@
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/000_003.cpp">Build source codes, Configure environment, Execute test code</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_001.cpp">What does computer vision library do?</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_002.cpp">Start OpenCV</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_004_about_opencv_Mat_class/001/main.cpp">001_004. Use Mat class, Create arrays</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_005_basic_operation_on_Mat/001/main.cpp">001_005. Perform arithmetic operation on Mat objects</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_006_basic_processing_load_image_and_show/001/main.cpp">001_006. Read image from disk, Create empty window, Sobel edge filter, Horizontal flip</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_007.cpp">how to access to and deal with pixel data (element of Mat)</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_004_about_opencv_Mat_class">001_004. Use Mat class, Create arrays</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_005_basic_operation_on_Mat">001_005. Perform arithmetic operation on Mat objects</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_006_basic_processing_load_image_and_show">001_006. Read image from disk, Create empty window, Sobel edge filter, Horizontal flip</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_007_how_to_access_pixel_data">Access pixel value, Change pixel value</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_001.cpp">load image and video and show them on window</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_002.cpp">various ways of copy image into Mat</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_003.cpp">how to access data (pixel) from Mat representing image, how to bring color data</a><br/>
