--- a/README.html
+++ b/README.html
@@ -9,7 +9,7 @@
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_005_basic_operation_on_Mat">001_005. Perform arithmetic operation on Mat objects</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_006_basic_processing_load_image_and_show">001_006. Read image from disk, Create empty window, Sobel edge filter, Horizontal flip</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_007_how_to_access_pixel_data">001_007. Access pixel value, Change pixel value</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_001.cpp">load image and video and show them on window</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_001_Load_and_show_Image_Video">Load and show image and video</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_002.cpp">various ways of copy image into Mat</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_003.cpp">how to access data (pixel) from Mat representing image, how to bring color data</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_004.cpp">how to access data (pixel) in Mat type (at,ptr,data,iterator like STL)</a><br/>
