--- a/README.html
+++ b/README.html
@@ -11,7 +11,7 @@
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/001_Introduce_007_how_to_access_pixel_data">001_007. Access pixel value, Change pixel value</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_001_Load_and_show_Image_Video">002_001. Load and show image and video</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_002_Mat_Basic_functions_copy_copyTo_clone_range_region_copy">002_002. Various ways to copy an image into Mat</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_003.cpp">how to access data (pixel) from Mat representing image, how to bring color data</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_003_rgb_structure_in_pixels_of_image">002_003. Get pixel value from grayscale image and 3 channel image</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_004.cpp">how to access data (pixel) in Mat type (at,ptr,data,iterator like STL)</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_006.cpp">write image file, write video file</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_007.cpp">matrix operation with Mat class</a><br/>
