--- a/README.html
+++ b/README.html
@@ -12,7 +12,7 @@
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_001_Load_and_show_Image_Video">002_001. Load and show image and video</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_002_Mat_Basic_functions_copy_copyTo_clone_range_region_copy">002_002. Various ways to copy an image into Mat</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_003_rgb_structure_in_pixels_of_image">002_003. Get pixel value from grayscale image and 3 channel image</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_004.cpp">how to access data (pixel) in Mat type (at,ptr,data,iterator like STL)</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_004_Access_pixel_using_data_and_at">002_004. Access pixel using at and data</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_006.cpp">write image file, write video file</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_007.cpp">matrix operation with Mat class</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_008.cpp">linear algebra operations(solver for inhomogeneous equation,eigenvalue,eigenvector,SVD) with opencv</a><br/>
