--- a/README.html
+++ b/README.html
@@ -13,8 +13,10 @@
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_002_Mat_Basic_functions_copy_copyTo_clone_range_region_copy">002_002. Various ways to copy an image into Mat</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_003_rgb_structure_in_pixels_of_image">002_003. Get pixel value from grayscale image and 3 channel image</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_004_Access_pixel_using_data_and_at">002_004. Access pixel using at and data</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_006.cpp">write image file, write video file</a><br/>
-<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_007.cpp">matrix operation with Mat class</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_005_Access_pixel_using_ptr_and_Iterator">002_005. Access pixel using ptr and MatIterator</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_006_Write_image_file">002_006. Write image and video files</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_AboutMat_007_linear_algebra_Inner_Cross_Inverse_Trace_Determinant">002_007. Matrix operations with Mat class</a><br/>
+
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_008.cpp">linear algebra operations(solver for inhomogeneous equation,eigenvalue,eigenvector,SVD) with opencv</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/002_009.cpp">deal with Mat with cpu and gpu</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/jhkim/003_001.cpp">draw various kind of object, line, circle, polyline, text on image, etc</a><br/>
