--- a/README.html
+++ b/README.html
@@ -42,9 +42,9 @@ Ch003_Drawing_Mouse_Control<br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/sykim/008_001.html">image segmentation</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/sykim/009_002.html">image segmentation</a><br/>
 <a href="https://github.com/youngminpark2559/opencv/blob/master/sykim/009_003.html">image segmentation</a><br/>
-<a href="https://youngmtool.github.io/opencv/sykim/011.html">011 morphology operation, dilation, erosion, opening, closing, structuring element</a><br/>
-<a href="https://youngmtool.github.io/opencv/sykim/012.html">012 overview of image transform</a><br/>
-<a href="https://youngmtool.github.io/opencv/sykim/013.html">013 image discrete transform : Discrete Cosine Transform, Fourier transform</a><br/>
-<a href="https://youngmtool.github.io/opencv/sykim/014_001.html">color_001</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/sykim/011.html">011 morphology operation, dilation, erosion, opening, closing, structuring element</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/sykim/012.html">012 overview of image transform</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/sykim/013.html">013 image discrete transform : Discrete Cosine Transform, Fourier transform</a><br/>
+<a href="https://github.com/youngminpark2559/opencv/blob/master/sykim/014_001.html">color_001</a><br/>
 
 <br/><br/><br/>
